Correction for nav wrapping behaviour

--- a/htdocs/themes/FlatVI/design/custom.css
+++ b/htdocs/themes/FlatVI/design/custom.css
@@ -401,7 +401,9 @@ li.Category-classifieds {
 	color: #000 !important;
 }
 
-.SiteSearch .InputBox {
+.SiteSearch input.InputBox {
+  width: 45% !important;
+  max-width: 300px;
   display: inline-block;
   float: right;
 	margin-top: -0.3em;
